--- a/flice-projects/pom.xml
+++ b/flice-projects/pom.xml
@@ -10,18 +10,19 @@
 	<name>Flice-Core</name>
 
 	<properties>
-		
+
 		<!-- JAVA -->
 		<java.version>1.8</java.version>
-		
+
 		<!-- DROPWIZARD -->
 		<dropwizard.version>0.7.1</dropwizard.version>
-		
+
 		<!-- GUICE -->
 		<guice.bundle>0.7.0.2</guice.bundle>
 
 		<!-- UTIL -->
 		<project.lombok>1.16.2</project.lombok>
+		<mysql.connector.version>5.1.34</mysql.connector.version>
 
 	</properties>
 
@@ -36,28 +37,40 @@
 			<version>${dropwizard.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-hibernate</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
+
 		<!-- UTIL -->
-		
-		  <dependency>
-            <groupId>com.hubspot.dropwizard</groupId>
-            <artifactId>dropwizard-guice</artifactId>
-            <version>${guice.bundle}</version>
-        </dependency>
+
+		<dependency>
+			<groupId>com.hubspot.dropwizard</groupId>
+			<artifactId>dropwizard-guice</artifactId>
+			<version>${guice.bundle}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${project.lombok}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
+		</dependency>
 
 	</dependencies>
 
 	<build>
-		
+
 		<finalName>flice-core</finalName>
-		
+
 		<plugins>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
