[BACK-END] Core in progress

--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 
 test:
   override: 
-    - cd flice-projects/notification; mvn clean package ; cd ..;
-    - cd flice-projects/flice-core  ; mvn clean package ; cd ..;
+    # - cd flice-projects/notification; mvn clean package ; cd ..;
+    - cd flice-projects/flice-core  ; mvn clean package ; cd ../../;
     # - mv flice-projects/target/flice-notification.jar $CIRCLE_ARTIFACTS/flice-notification.jar
     - mv flice-projects/flice-core/target/flice-core.jar         $CIRCLE_ARTIFACTS/flice-core.jar
