--- a/flice-projects/flice-core/pom.xml
+++ b/flice-projects/flice-core/pom.xml
@@ -19,6 +19,10 @@
 
 		<!-- GUICE -->
 		<guice.bundle>0.7.0.2</guice.bundle>
+		
+		<!-- SECURITY -->
+		<jbcrypt.version>0.3m</jbcrypt.version>
+	
 
 		<!-- UTIL -->
 		<project.lombok>1.16.2</project.lombok>
@@ -61,6 +65,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.connector.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>${jbcrypt.version}</version>
 		</dependency>
 
 	</dependencies>
