--- a/flice-projects/flice-core/src/main/resources/dev.yml
+++ b/flice-projects/flice-core/src/main/resources/dev.yml
@@ -15,3 +15,7 @@ datasource:
   properties:
     hibernate.dialect       : org.hibernate.dialect.MySQLDialect
     hibernate.hbm2ddl.auto  : create-drop
+
+
+logging:
+  level: INFO
