--- a/fig.yml
+++ b/fig.yml
@@ -10,7 +10,7 @@ mysql:
   ports:
     - "3307:3306"
   environment:
-    MYSQL_DATABASE      : flice-core
+    MYSQL_DATABASE      : flice
     MYSQL_ROOT_PASSWORD : ZmxpY2UNCg==
 
 rabbitmq:
