--- a/flice-projects/flice-notification/pom.xml
+++ b/flice-projects/flice-notification/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.timeoutzero.flice</groupId>
-	<artifactId>notification</artifactId>
+	<groupId>com.timeoutzero</groupId>
+	<artifactId>flice-notification</artifactId>
 	<version>0.1.0</version>
 
 	<name>notification</name>
