--- a/flice-projects/flice-notification/pom.xml
+++ b/flice-projects/flice-notification/pom.xml
@@ -60,7 +60,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>notification</finalName>
+		<finalName>flice-notification</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
