--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 
 test:
   override: 
-    - cd flice-projects/flice-notification; mvn clean package ; cd ..;
+    - cd flice-projects/flice-notification; mvn clean package ; cd ../../;
     - cd flice-projects/flice-core        ; mvn clean package ; cd ../../;
     - cd flice-projects/flice-security    ; mvn clean package ; cd ../../;
     - mv flice-projects/flice-notification/target/flice-notification.jar $CIRCLE_ARTIFACTS/flice-notification.jar
