--- a/flice-projects/flice-security/pom.xml
+++ b/flice-projects/flice-security/pom.xml
@@ -11,7 +11,9 @@
 
 
 	<properties>
-
+	
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
 		<!-- JAVA -->
 		<java.version>1.8</java.version>
 
@@ -105,8 +107,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 
