--- a/flice-projects/flice-security/pom.xml
+++ b/flice-projects/flice-security/pom.xml
@@ -11,9 +11,9 @@
 
 
 	<properties>
-	
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<!-- JAVA -->
 		<java.version>1.8</java.version>
 
@@ -92,6 +92,12 @@
 			<groupId>org.mindrot</groupId>
 			<artifactId>jbcrypt</artifactId>
 			<version>${jbcrypt.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 
 	</dependencies>
