--- a/flice-projects/flice-security/pom.xml
+++ b/flice-projects/flice-security/pom.xml
@@ -95,9 +95,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>2.0.1</version>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.4</version>
 		</dependency>
 
 	</dependencies>
