--- a/flice-projects/flice-security/pom.xml
+++ b/flice-projects/flice-security/pom.xml
@@ -100,6 +100,13 @@
 			<version>0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
