--- a/flice-projects/flice-core/src/main/resources/docker.yml
+++ b/flice-projects/flice-core/src/main/resources/docker.yml
@@ -13,9 +13,9 @@ server:
 
 datasource: 
 
-  user            : flice
+  user            : root
   password        : ZmxpY2UNCg==
-  url             : jdbc:mysql://localhost:3307/flice-core
+  url             : jdbc:mysql://mysql:3306/flice-core
   driverClass     : com.mysql.jdbc.Driver
 
   validationQuery : SELECT 1
