--- a/flice-projects/flice-security/pom.xml
+++ b/flice-projects/flice-security/pom.xml
@@ -26,7 +26,6 @@
 		<!-- SECURITY -->
 		<jbcrypt.version>0.3m</jbcrypt.version>
 
-
 		<!-- UTIL -->
 		<project.lombok>1.16.2</project.lombok>
 		<mysql.connector.version>5.1.34</mysql.connector.version>
@@ -34,7 +33,6 @@
 	</properties>
 
 	<dependencies>
-
 
 		<!-- DROPWIZARD -->
 
@@ -155,7 +153,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.timeoutzero.flice.core.init.CoreApplication</mainClass>
+									<mainClass>com.timeoutzero.flice.security.init.SecurityApplication</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
