--- a/flice-projects/flice-security/src/main/resources/docker.yml
+++ b/flice-projects/flice-security/src/main/resources/docker.yml
@@ -14,8 +14,8 @@ server:
 datasource: 
 
   user            : root
-  password        : 
-  url             : jdbc:mysql://localhost:3306/flice-security
+  password        : ZmxpY2UNCg==
+  url             : jdbc:mysql://mysql:3306/flice-security
   driverClass     : com.mysql.jdbc.Driver
 
   validationQuery : SELECT 1
@@ -24,7 +24,6 @@ datasource:
   properties:
     hibernate.dialect       : org.hibernate.dialect.MySQLDialect
     hibernate.hbm2ddl.auto  : create-drop
-
 
 allowedGrantTypes:
   - password
