--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ nginx:
   image: nginx
   ports:
     - "80:80"
+  links:
+    - core
   volumes:
     - flice-clients/default.conf:/etc/nginx/conf.d/default.conf
     - flice-clients/web/:/usr/share/nginx/html
