--- a/fig.yml
+++ b/fig.yml
@@ -8,8 +8,7 @@ nginx:
     - core
   volumes:
     - flice-clients/default.conf:/etc/nginx/conf.d/default.conf
-    - flice-clients/web/:/usr/share/nginx/html
-
+    - flice-clients/web/builds/dev/:/usr/share/nginx/html
 mysql:
   image: lucasgmartins/mysql
   ports:
@@ -47,5 +46,4 @@ security:
   links:
     - mysql
   command: java -jar /app/flice-security.jar server /app/docker.yml
-
 
