--- a/flice-clients/default.conf
+++ b/flice-clients/default.conf
@@ -1,5 +1,5 @@
 server {
-	
+
 	sendfile off;
 
 	root /usr/share/nginx/html;
@@ -11,5 +11,9 @@ server {
 
 	location /core/ {
 		proxy_pass http://core:8080/core/api/;
+	}
+
+	location /security/ {
+		proxy_pass http://security:8081/security/api;
 	}
 }
