--- a/flice-projects/flice-core/src/main/resources/dev.yml
+++ b/flice-projects/flice-core/src/main/resources/dev.yml
@@ -1,8 +1,12 @@
 ---
 
+#Custom Applications Config
 application           : "flice-core"
 application-client-id : "Y29yZQ=="
 
+securityApiUrl        : "http://localhost:8081/security/api/token/verify"
+
+#Commom Applications Config
 server:
   applicationConnectors:
   - type: http 
