[FRONT-END] Login in progress

--- a/flice-clients/default.conf
+++ b/flice-clients/default.conf
@@ -14,6 +14,6 @@ server {
 	}
 
 	location /security/ {
-		proxy_pass http://security:8081/security/api;
+		proxy_pass http://security:8081/security/api/;
 	}
 }
