--- a/flice-projects/flice-core/pom.xml
+++ b/flice-projects/flice-core/pom.xml
@@ -73,6 +73,12 @@
 			<version>${dropwizar.flyway.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.googlecode.flyway</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<!-- UTIL -->
 
 		<dependency>
