--- a/flice-projects/flice-core/pom.xml
+++ b/flice-projects/flice-core/pom.xml
@@ -23,6 +23,9 @@
 		<!-- GUICE -->
 		<guice.bundle>0.7.0.2</guice.bundle>
 
+		<!-- DB -->
+		<flyway.version>2.3.1</flyway.version>
+
 		<!-- SECURITY -->
 		<jbcrypt.version>0.3m</jbcrypt.version>
 
@@ -76,7 +79,7 @@
 		<dependency>
 			<groupId>com.googlecode.flyway</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>2.3.1</version>
+			<version>${flyway.version}</version>
 		</dependency>
 
 		<!-- UTIL -->
@@ -103,6 +106,12 @@
 			<groupId>org.mindrot</groupId>
 			<artifactId>jbcrypt</artifactId>
 			<version>${jbcrypt.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.7</version>
 		</dependency>
 
 	</dependencies>
