--- a/flice-projects/flice-core/src/main/resources/config/docker.yml
+++ b/flice-projects/flice-core/src/main/resources/config/docker.yml
@@ -1,9 +1,8 @@
 ---
 
-
 #Custom Applications Config
 application           : "flice-core"
-application-client-id : "Y29yZQ=="
+applicationClientId : "Y29yZQ=="
 
 securityApiUrl        : "http://security:8081/security/api/token/verify"
 
@@ -35,6 +34,8 @@ datasource:
   properties:
     hibernate.dialect       : org.hibernate.dialect.MySQLDialect
     hibernate.hbm2ddl.auto  : none
+    jadira.usertype.autoRegisterUserTypes : true
+
 
 httpClient:
   timeout                 : 20000ms
