--- a/flice-projects/flice-core/pom.xml
+++ b/flice-projects/flice-core/pom.xml
@@ -32,7 +32,9 @@
 		<!-- UTIL -->
 		<project.lombok>1.16.2</project.lombok>
 		<mysql.connector.version>5.1.34</mysql.connector.version>
-
+		<joda.time>2.7</joda.time>
+		<hystrx.bundle>0.1</hystrx.bundle>
+		
 	</properties>
 
 	<dependencies>
@@ -111,7 +113,13 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.7</version>
+			<version>${joda.time}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.zapodot</groupId>
+			<artifactId>hystrix-dropwizard-bundle</artifactId>
+			<version>0.1</version>
 		</dependency>
 
 	</dependencies>
