--- a/flice-clients/web/bower.json
+++ b/flice-clients/web/bower.json
@@ -26,6 +26,7 @@
     "pace": "~1.0.2",
     "angular-spinner": "~0.5.1",
     "spin.js": "~2.0.1",
-    "angulartics": "~0.17.2"
+    "angulartics": "~0.17.2",
+    "angular-cookies": "~1.3.15"
   }
 }
